--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <nav class="menu1">
                      <ul class="menu drop">
                         <li class="menuList curent">
-                           <a href="#" class="menuLink nahuy">HOME</a>
+                           <a href="#" class="menuLink">HOME</a>
                         </li>
                         <li class="menuList">
                            <a href="#" class="menuLink">ABOUT</a>
